--- a/firmware/GXAirCom/src/web/orig/info.html
+++ b/firmware/GXAirCom/src/web/orig/info.html
@@ -204,15 +204,17 @@ function onMessage(evt) {
             <th>Board Type</th>
             <td><select name="board" id="board" disabled>
               <option value="0">TTGO T-Beam T22_V1.0 / T22_V1.1</option>
-              <option value="2">TTGO T-Beam T22_V07/TTGO LORA T3_V1.6 (V2 1.6)</option>
-              <option value="5">TTGO T-Beam SX1262</option>
               <option value="1">HELTEC / TTGO LORA</option>
+              <option value="2">TTGO T-Beam T22_V07/TTGO LORA T3_V1.6 (V2 1.6)</option>
               <option value="4">TTGO T-SIM7000G</option>
+              <option value="5">TTGO T-Beam SX1262</option>
               <option value="6">TTGO TCall SIM800L</option>
               <option value="7">HELTEC Wireless Stick Lite</option>
-              <option value="8">HELTEC Wireless Stick</option>
-              <option value="10">HELTEC Wireless Stick Lite V3</option>
+              <option value="8">HELTEC Wireless Stick V2</option>
               <option value="9">Lilygo T-Beam-S3CORE</option>
+              <option value="10">HELTEC Wireless Stick Lite V3</option>
+              <option value="11">HELTEC Wireless Paper V1.1</option>
+              <option value="12">HELTEC Wireless Stick V3</option>
               <option value="255">unknown</option>
             </select></td>
           </tr>
